# midi-server

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  PROJECT-GUIDELINES.md  README.md  RELEASING.md  VERSION
.github/workflows/: build.yml  installer-package-probe.yml  installer-sign-mutation-sweep.yml  installer-sign-smoke.yml  release-linux.yml  release-macos.yml  release-preflight.yml
dashboard/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.electron.config.ts  vite.web.config.ts
dashboard/scripts/: server.ts
dashboard/src/api-server/: client-factory.ts  discovery.ts  index.ts  local-client.ts  log-buffer.ts  midi-client.ts  midi-proxy.ts  process-manager.ts  remote-client.ts  routes-storage.ts  routing-engine.ts  routing-handlers.ts  server.ts  types.ts  update-handlers.ts  virtual-ports-storage.ts  vite-plugin.ts
dashboard/src/main/: index.ts  log-buffer.ts  update-manager.ts
dashboard/src/preload/: index.ts
packaging/linux/: Dockerfile  README.md  build-installer.sh  docker-build.sh
packaging/macos/: README.md  build-installer.sh  distribution.xml  entitlements.plist  generate-p12.sh  installer-package-probe.sh  installer-sign-mutation-sweep.sh  installer-sign-smoke.sh  release-build.sh  release-common.sh  release-cut.sh  release-preflight.sh  release-prepare.sh  release-publish.sh  release-secrets-init.sh  release-secrets.sh  release.config.sh
src/: JsonBuilder.h  MidiHttpServer.cpp  MidiPort.h  RouteManager.h  VirtualMidiPort.h
(+102 files in other folders)
